--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- HEADER -->
         <header class="py-8 animate-fadeIn">
             <h1 class="text-4xl md:text-5xl font-bold neon-text">
-                LIDHINSHA <span class="text-red-500">M</span> LATHEEF KHAN
+                LIDHINSHA <span class="">M</span> LATHEEF KHAN
             </h1>
             <p class="mt-2 text-green-400 tracking-wide text-sm hacker-text">
                 Cybersecurity • Pentesting • SOC Operations
