--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </main>
 
         <footer class="text-center text-xs mt-10 mb-4 text-gray-600">
-            Hacker-Theme Portfolio • Tailwind + Custom CSS • Designed by Ramees
+            copyright &copy; 2025 LIDHINSHA M LATHEEF KHAN
         </footer>
 
     </div>
